spotbugs fixes for travis-ci/pr